--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: JustACalculator-ALPHA
+          name: JustACalculator_ALPHA
           path: app/build/outputs/apk/debug/app-debug.apk
