--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -31,7 +33,7 @@
         </activity>
 
         <receiver
-            android:name=".NotificationReceiver"
+            android:name=".util.NotificationReceiver"
             android:exported="false" />
     </application>
 </manifest>
